fix: reduce size of all elements
everything was too big for common resolutions, so a reduction in
measurements was necessary.

--- a/styles.css
+++ b/styles.css
@@ -16,19 +16,20 @@ background: var(--main-color);
 }
 
 h1 {
-	padding: 10px;
+	padding: 20px 10px;
 	margin-bottom: 10px;
-	font-size: 3em;
+	font-size: 2.7em;
 	color: var(--accent-color);
 }
 
 h3 {
 	color: var(--accent-color);
-	font-size: 2em;
+	font-size: 1.3em;
+	padding: 0 30px;
 }
 
 .container {
-	width: 500px;
+	width: 300px;
 	aspect-ratio: 3 / 4;
 	padding: 20px;
 	border: 2px solid var(--accent-color);
@@ -50,7 +51,7 @@ button {
 }
 
 button, input{
-	font-size: 2em;
+	font-size: 1.2em;
 	background: var(--main-color);
 	color: var(--accent-color);
 	border: 1px solid var(--accent-color);
